[gd_scene load_steps=2 format=3 uid="uid://prologue_scene"]

[ext_resource type="Script" path="res://scripts/ui/PrologueSequence.gd" id="1_prologue"]

[node name="PrologueSequence" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_prologue")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.02, 0.01, 0.0, 1)

[node name="LetterPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="LetterText" type="RichTextLabel" parent="LetterPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -60.0
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true

[node name="ContinueButton" type="Button" parent="LetterPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -40.0
offset_right = 75.0
offset_bottom = -10.0
text = "Continue"

[node name="SkipButton" type="Button" parent="LetterPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -40.0
offset_right = -5.0
offset_bottom = -10.0
text = "Skip"

[node name="CandleAnimation" type="AnimationPlayer" parent="."]

